--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing Book</h1>
+
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラー
+  <%= @book.errors.count %>errors prohibited this book from being saved:
   <ul>
     <%= @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -8,17 +9,17 @@
   </ul>
 <% end %>
 
-<%= form_with model:@book do |form| %>
+<%= form_with model:@book do |book| %>
   <div class="field">
-    <%= form.label :title, "Title" %>
-    <%= form.text_field :title %>
+    <%= book.label :title, "Title" %>
+    <%= book.text_field :title %>
   </div>
   <div class="field">
-    <%= form.label :body, "Body" %>
-    <%= form.text_area :body %>
+    <%= book.label :body, "Body" %>
+    <%= book.text_area :body %>
   </div>
   <div class="field">
-    <%= form.submit "Update Book" %>
+    <%= book.submit "Update Book" %>
   </div>
 <% end %>
 
